avoid overlapping line background, notably for "quoted";

--- a/etc/isabelle.css
+++ b/etc/isabelle.css
@@ -18,7 +18,7 @@ body {
   background-color: #FFFFFF;
   padding: 10px;
   font-family: IsabelleText;
-  line-height: 120%;
+  line-height: 147%;
 }
 
 .theories { background-color: #FFFFFF; padding: 10px; }
